# k8s-bazel-go-example

./: BUILD.bazel  README.md  WORKSPACE
