load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nictuku/zurigo/kubernetes",
    visibility = ["//visibility:private"],
    deps = [
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
    ],
)

go_binary(
    name = "kubernetes",
    importpath = "github.com/nictuku/zurigo/kubernetes",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
